Changes for 1.8.13rc1

........S. [ZBX-4884] fixed incorrect calculation of items using option "Delta (speed per second)" after recovery from unsupported state (Sasha)
..F....... [ZBX-4849] implemented a check that a trigger expression doesn't use items from both hosts and templates at the same time (Pavels)
....I..... [ZBX-3929] removed deprecated Switch module from a gen.pl script (Sasha)

Changes for 1.8.12

1.8.12rc1 was released as 1.8.12 without any changes

Changes for 1.8.12rc2

.......PS. [ZBX-4793] fixed processing of quoted strings in dynamic SNMP indexes (Sasha)
.......PS. [ZBX-4709] fixed processing of quoted strings in SNMP items (Sasha)

Changes for 1.8.12rc1

...GI..... [ZBXNEXT-584] added support of multiple server in active check mode; thanks to Takanori Suzuki (Sasha)
...G...... [ZBX-4635] added support for optional first parameter to vfs.dev.* on Solaris (dimir)
..F....... [ZBX-4795] fixed group creation for child nodes (Vedmak)
...G...... [ZBX-4195] fixed memory leak while processing unsupported performance counters by Windows agent (Sasha)
A.F....... [ZBX-4813] fixed incorrect exception handling in maps when checking for circularity (Toms, Vedmak)
..F....... [ZBX-2873] fixed colors in dark theme (Vedmak)
..F....... [ZBX-3152] fixed global messages being shown even if all severities are unchecked (Vedmak)
...G...... [ZBX-4801] fixed processing of proc.num[] and proc.mem[] checks with name of processes longer than 15 characters (Sasha)
..F....... [ZBX-4253] fixed menu link inconsistency in tr_status.php (Toms)
.......PS. [ZBX-4749] fixed proxy crash on exit when deleting trend cache (dimir)
........S. [ZBXNEXT-744] added support of {ITEM.ID} and {TRIGGER.EXPRESSION} macros in notifications and commands (Sasha)
..F....... [ZBX-4761] fixed "&" encoding in input fields (Pavels)
A.F....... [ZBX-4697] fixed error when mass-updating group for hosts that belong to different groups (Vedmak)